# ScreenPipe

./: .gitignore  README.md
.github/workflows/: build-macos.yml  build-windows.yml  ci.yml  e2e-test.yml  e2e-windows.yml  release-app.yml  release-cli.yml  release-mcp.yml  windows-integration-test.yml
apps/screenpipe-app-tauri/src-tauri/src/: embedded_server.rs
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio/src/audio_manager/: builder.rs  manager.rs
crates/screenpipe-audio/src/segmentation/: segmentation_manager.rs
crates/screenpipe-engine/: Cargo.toml
crates/screenpipe-engine/src/: event_driven_capture.rs  ingest_processor.rs  lib.rs  recording_config.rs
crates/screenpipe-engine/src/cli/: mod.rs
crates/screenpipe-engine/src/vision_manager/: manager.rs
crates/screenpipe-queue/: Cargo.toml
crates/screenpipe-queue/src/: lib.rs
