[package]
name = "screenpipe-queue"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0.86"
tracing = { workspace = true }
image = { workspace = true }
